@@ -99,6 +99,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - LaTeX                  Matthais Pospiech
 - Lisp                   Roberto Rossi
 - LOLcode                Benny Baumann
+- LScript                Beau McGuigan
 - Lua                    Roberto Rossi
 - m86k                   Benny Baumann
 - mIRC                   Alberto de Areba Sánchez
